feat(categories): add create endpoint
